tests/NormalTests/paczka1/small_fuzzy/19653679.err
Error in line 3: 5i7 A962 99,1
Error in line 4: 5i7 S110 75,0
Error in line 9: 5i7 A497 17,5
